[tool.poetry]
name = "pr-bot"
version = "0.1.0"
description = ""
authors = ["Vasia <vasia19rus@bk.ru>"]
readme = "README.md"
packages = [{include = "pr_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.3.1"
aiogram = {url = "https://github.com/aiogram/aiogram/archive/refs/heads/dev-3.x.zip"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
